// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildConnectionQuery array queries without count and nodes should build correct query 1`] = `
select
    first_name,
    last_name
from
    test_table

`;

exports[`buildConnectionQuery count and nodes queries should build correct query 1`] = `
select
    first_name,
    last_name,
    count(*) OVER ()
from
    test_table

`;

exports[`buildConnectionQuery count-only queries should build correct query 1`] = `
select
    count(*)
from
    test_table

`;

exports[`buildQuery should build basic query 1`] = `
select
    name,
    age
from
    test_table

`;
